Add main module and remove core module

--- a/ui/home/src/main/res/values/strings.xml
+++ b/ui/home/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="home">Home</string>
     <string name="searchIcon">Search Icon</string>
+    <string name="menu">Menu</string>
 </resources>
