--- a/ui/search/src/main/res/values/strings.xml
+++ b/ui/search/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="noItemFound">No Item Found</string>
+    <string name="autoRetryHint">Go online to retry again</string>
 </resources>
