--- a/ui/home/src/main/res/values/strings.xml
+++ b/ui/home/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="home">Home</string>
-    <string name="searchIcon">Search Icon</string>
+    <string name="searchIconContentDescription">Search Icon</string>
     <string name="menu">Menu</string>
 </resources>
