--- a/ui/main/src/main/res/values/strings.xml
+++ b/ui/main/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="autoRetryIcon">Auto Retry Icon</string>
     <string name="favorite">Favorite</string>
     <string name="setting">Setting</string>
-    <string name="offline">Offline</string>
-    <string name="online">Online</string>
+    <string name="homeTabContentDescription">home Tab</string>
+    <string name="favoriteTabContentDescription">favorite tab</string>
+    <string name="settingTabContentDescription">setting tab</string>
 </resources>
