--- a/ui/common/src/main/res/values/strings.xml
+++ b/ui/common/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="retry">Retry</string>
-    <string name="defaultErrorHint">Oops! \n something went wrong \n Pleas try again</string>
+    <string name="defaultErrorHint">We\'r sorry \n Something went wrong \n\n Pleas try again</string>
     <string name="emptyIcon">Empty Icon</string>
     <string name="search">Search</string>
     <string name="autoRetryHint">Go online to try again</string>
