--- a/ui/setting/src/main/res/values/strings.xml
+++ b/ui/setting/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="setting">Setting</string>
     <string name="theme">Theme</string>
+    <string name="checkIconDescription">Check Icon</string>
 </resources>
